# Procurement_Atomic_agents

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  run_web.py
.claude/: launch.json
fixtures/: contract_sample.txt  negotiation_context.txt  spec_cable.txt
procurement_agents/: __init__.py  llm.py
procurement_agents/agents/: contract_agent.py  contract_cockpit_agent.py  negotiation_agent.py  spec_shouldcost_agent.py
procurement_agents/core/: contract.py  contract_cuad.py  data.py  negotiation.py  shouldcost.py
procurement_agents/schemas/: cockpit.py  contract.py  negotiation.py  spec_shouldcost.py
tests/: test_contract_core.py  test_core.py  test_negotiation_core.py
web/: app.py  parse.py
web/static/: app.js  cockpit.css
web/templates/: base.html  index.html  result.html
