[project]
name = "procurement-atomic-agents"
version = "0.1.0"
description = "Narrow procurement AI agents (should-cost / contract / negotiation), provider-agnostic for local -> Claude -> Yandex."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "instructor>=1.5",
    "openai>=1.40",
    "anthropic>=0.39",
    "pandas>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["procurement_agents*"]
